# Comfyui-MusePose

./: README.md  musepose-workflow-demo.json  musepose-workflow-demo.mov  nodes.py  pyproject.toml  requirements.txt
configs/: test_stage_2.yaml
musepose/pipelines/: pipeline_pose2vid_long.py
pose/script/: wholebody.py
